fix(i18n): fix options menu translation error
The options flow init step uses async_show_menu() which requires
menu_options format in strings, not title/description/data format.

This was causing translation errors:
'The intl string context variable "device_name" was not provided'

Fixed by converting init step from form format to menu format:
- Before: title/description/data with placeholders
- After: menu_options with localized labels

Updated all translation files (en, de, fr, es) with proper
menu option labels.

--- a/custom_components/ubisys/translations/de.json
+++ b/custom_components/ubisys/translations/de.json
@@ -32,16 +32,9 @@
         "description": "Configure {device_name}.\n\n• Documentation: {docs_url}\n• Issues: {issues_url}\n\nClose this page to return to options."
       },
       "init": {
-        "title": "Ubisys {model} Options",
-        "description": "Choose what to configure for {device_name}.",
-        "data": {
-          "shade_type": "Shade Type",
-          "verbose_info_logging": "Verbose info logging",
-          "verbose_input_logging": "Verbose input event logging",
-          "turnaround_guard_time": "Guard Time (50ms units)",
-          "inactive_power_threshold": "Inactive Power Threshold (mW)",
-          "startup_steps": "Startup Steps (AC waves)",
-          "additional_steps": "Additional Steps (%)"
+        "menu_options": {
+          "about": "Über & Dokumentation",
+          "configure": "Gerät konfigurieren"
         }
       },
       "d1_options": {
